--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="header__nav">
             <ul class="header__list">
                 <li class="header__item">
-                <a href="index3.html" class="header__anchor"><i class="fa-solid fa-folder">Inicio</i></a>
+                <a href="index.html" class="header__anchor"><i class="fa-solid fa-folder">Inicio</i></a>
                 </li>
                 <li class="header__item">  
                 <a href="pag/mi cuenta.html" class="header__anchor">Mi cuenta</a>
