--- a/pag/productos.html
+++ b/pag/productos.html
@@ -26,7 +26,7 @@
     <a href="#"><img src="../img/quiimica torres logo pequeño.png" alt="logo"></a>
     <ul>
         <li>
-            <a href="../index3.html">Inicio</a>
+            <a href="../index.html">Inicio</a>
         </li>
           <li>  
             <a href="mi cuenta.html">Mi cuenta</a>
