4 Commit: Remplazo de los lorem ipsum y aplicacion de seo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <link rel="icon" href="img/quiimica torres logo pequeño.png" type="image/x-icon">
-        <title>INDEX</title>
+        <title>QUÍMICA TORRES SAC</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                   
-                  <a class="header__logo p5" href="#"><img src="./img/quiimica torres logo pequeño.png" alt="logo"></a>
+                  <a class="header__logo p5" href="#"><img src="./img/quiimica torres logo pequeño.png" alt="logo_pequeño"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -61,6 +61,7 @@
     <main>
 
 <section class="container-fluid hero">
+  
     <div class="hero__wrapper">
         <h1 class="hero__heading">Bienvenidos a Química torres</h1>
         <p class="hero-slogan">Pinturas de larga vida</p>
@@ -73,32 +74,33 @@
         <div class="col-md-6">
 <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
 <a href="#"><img src="img/quimica torres logo largo.png" alt="logolargo" class="infocard__img"></a>
-    <h2 class="infocard__titulo">Info 1</h2>
-    <p class="infocard__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat illum consequatur libero nisi, vitae corporis nulla quis dolor a fugit consectetur. Dolorem tempora deserunt, iste magnam similique possimus architecto repellendus.</p>
+    <h2 class="infocard__titulo">Nosotros</h2>
+    <p class="infocard__desc">Química Torres SAC desde 01/06/2012, Q.T ha ofrecido la mejor calidad en sus productos logrando mantenerse competitivos para liderar el mercado de pintura y thinner.</p>
     <a href="pag/mi cuenta.html" class="hero__anchor">MÁS INFORMACIÓN</a>
 </div>
 </div>
 <div class="col-md-6">
     <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
     <a href="#"><img src="img/quimica torres logo largo.png" alt="logolargo" class="infocard__img"></a>
-        <h2 class="infocard__titulo">Info 2</h2>
-        <p class="infocard__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat illum consequatur libero nisi, vitae corporis nulla quis dolor a fugit consectetur. Dolorem tempora deserunt, iste magnam similique possimus architecto repellendus.</p>
+        <h2 class="infocard__titulo">Contactanos</h2>
+        <p class="infocard__desc">Contáctanos, con gusto nuestros ejecutivos especializados atenderán tus dudas, recibirán tus comentarios sobre nuestros productos.</p>
         <a href="pag/mi cuenta.html" class="hero__anchor">MÁS INFORMACIÓN</a>
     </div>
     </div>
     <div class="col-md-6">
         <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
         <a href="#"><img src="img/quimica torres logo largo.png" alt="logolargo" class="infocard__img"></a>
-            <h2 class="infocard__titulo">Info 3</h2>
-            <p class="infocard__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat illum consequatur libero nisi, vitae corporis nulla quis dolor a fugit consectetur. Dolorem tempora deserunt, iste magnam similique possimus architecto repellendus.</p>
+            <h2 class="infocard__titulo">Catalogo</h2>
+            <p class="infocard__desc">Descubre promociones e información de tus productos favoritos. 
+              La mejor forma para planificar tus compras.</p>
             <a href="pag/mi cuenta.html" class="hero__anchor">MÁS INFORMACIÓN</a>
         </div>
         </div>
         <div class="col-md-6">
             <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
             <a href="#"><img src="img/quimica torres logo largo.png" alt="logolargo" class="infocard__img"></a>
-                <h2 class="infocard__titulo">Info 4</h2>
-                <p class="infocard__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat illum consequatur libero nisi, vitae corporis nulla quis dolor a fugit consectetur. Dolorem tempora deserunt, iste magnam similique possimus architecto repellendus.</p>
+                <h2 class="infocard__titulo">Mi cuenta</h2>
+                <p class="infocard__desc">Podrás acceder a tus datos y ajustes con tan solo un toque. Crear tu perfil y acceder a gestionar tu cuenta".</p>
                 <a href="pag/mi cuenta.html" class="hero__anchor">MÁS INFORMACIÓN</a>
             </div>
             </div>
@@ -106,12 +108,17 @@
 </section>
     </main>
     <hr>
+
+
 <aside class="container-fluid video">
-    <h2 class="video__titulo"> contenido extra</h2>
-    
-    <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-    <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
+  <h2 class="video__titulo"> En busca del color perfecto</h2>
+  
+  <iframe id="background-video" width="560" height="315" src="https://www.youtube.com/embed/ENoRePki-bo?controls=0&amp;start=90&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
 </aside>
+
+
+
 
 <hr>
 <footer class="footer d-block p-0">
@@ -123,7 +130,7 @@
               <div class="collapse show navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav footer__list align-items-center">
                     <li class="nav-item footer__item">
-                        <a class="nav-link active footer__anchor" aria-current="page"  href="#"><img src="./img/fondo1.jpg" alt="logo"></a></a>
+                        <a class="nav-link active footer__anchor" aria-current="page"  href="#"><img src="./img/fondo1.jpg" alt="fondo1"></a></a>
                       </li>
                   <li class="nav-item footer__item">
                     <a class="nav-link active footer__anchor" aria-current="page" href="#">SIGUENOS EN:</a>
