--- a/pag/mi cuenta.html
+++ b/pag/mi cuenta.html
@@ -1,8 +1,8 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <link rel="icon" href="img/quiimica torres logo pequeño.png" type="image/x-icon">
-        <title>INDEX</title>
+        <link rel="icon" href="../img/quiimica torres logo pequeño.png" type="image/x-icon">
+        <title>Mi cuenta</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                   
-                  <a class="header__logo p5" href="#"><img src="../img/quiimica torres logo pequeño.png" alt="logo"></a>
+                  <a class="header__logo p5" href="#"><img src="../img/quiimica torres logo pequeño.png" alt="logo_pequeño"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -88,7 +88,7 @@
           <div class="collapse show navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav footer__list align-items-center">
                 <li class="nav-item footer__item">
-                    <a class="nav-link active footer__anchor" aria-current="page"  href="#"><img src="../img/fondo1.jpg" alt="logo"></a></a>
+                    <a class="nav-link active footer__anchor" aria-current="page"  href="#"><img src="../img/fondo1.jpg" alt="fondo1"></a></a>
                   </li>
               <li class="nav-item footer__item">
                 <a class="nav-link active footer__anchor" aria-current="page" href="#">SIGUENOS EN:</a>
