--- a/pag/contactanos.html
+++ b/pag/contactanos.html
@@ -1,8 +1,8 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <link rel="icon" href="img/quiimica torres logo pequeño.png" type="image/x-icon">
-        <title>INDEX</title>
+      <link rel="icon" href="../img/quiimica torres logo pequeño.png" type="image/x-icon">
+        <title>CONTACTANOS</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
