--- a/pag/productos.html
+++ b/pag/productos.html
@@ -1,8 +1,8 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-      <link rel="icon" href="img/quiimica torres logo pequeño.png" type="image/x-icon">
-      <title>INDEX</title>
+      <link rel="icon" href="../img/quiimica torres logo pequeño.png" type="image/x-icon">
+      <title>CATALOGO</title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           
-          <a class="header__logo p5" href="#"><img src="../img/quiimica torres logo pequeño.png" alt="logo"></a>
+          <a class="header__logo p5" href="#"><img src="../img/quiimica torres logo pequeño.png" alt="logo_pequeño"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -66,24 +66,24 @@
     </div>
     <div class="carousel-inner carousel--alto">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="../img/aguarraz.png" class="d-block w-100 carousel--img" alt="...">
+        <img src="../img/fondo pintura.png" class="d-block w-100 carousel--img" alt="pinturas_fondo_1">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Aguarrás</h5>
-          <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
+          <h5><strong>IDEAL PARA TU HOGAR</strong></h5>
+          <p><strong>Pintura altamante testeada y segura para todos.</strong></p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="../img/anticorrosivo.png" class="d-block w-100 carousel--img" alt="...">
+        <img src="../img/fondo_pintura2.jpg" class="d-block w-100 carousel--img" alt="marca">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Anticorrosivo</h5>
-          <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+          <h5><strong>LA MARCA QUE TU CONOCES</strong></h5>
+          <p><strong>Nos preocupamos por tus necesidades al ofrecer los mejores productos.</strong></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../img/barniz.png" class="d-block w-100 carousel--img" alt="...">
+        <img src="../img/fondo_pintura3.jpg" class="d-block w-100 carousel--img" alt="pinturas_fondo_2">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Barniz</h5>
-          <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+          <h5><strong>DALE VIDA A TU HOGAR</strong></h5>
+          <p><strong>Con la mayor variedad de colores y productos que QT ofrece para ti.</strong></p>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
   <div class="col-md-4">
   <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
 
-    <img class="infocard__img"src="../img/aguarraz.png" alt="">
+    <img class="infocard__img"src="../img/aguarraz.png" alt="aguarrás">
                 <h2 class="infocard__titulo">Aguarrás</h2>
                 <p class="infocard__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni necessitatibus, accusamus maxime reiciendis nam quod eum iste numquam sit sapiente, voluptate architecto corporis. Non eligendi deserunt accusantium voluptatum, omnis saepe, reiciendis consequatur suscipit in ad delectus? Officia harum praesentium illo?</p>
                 <a href="./contactanos.html" class="hero__anchor">MÁS INFORMACIÓN</a>
@@ -116,7 +116,7 @@
   <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
 
 
-    <img class="infocard__img"src="../img/anticorrosivo.png" alt="">
+    <img class="infocard__img"src="../img/anticorrosivo.png" alt="Anticorrosivo">
                 <h2 class="infocard__titulo">Anticorrosivo</h2>
                 <p class="infocard__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni necessitatibus, accusamus maxime reiciendis nam quod eum iste numquam sit sapiente, voluptate architecto corporis. Non eligendi deserunt accusantium voluptatum, omnis saepe, reiciendis consequatur suscipit in ad delectus? Officia harum praesentium illo?</p>
                 <a href="./contactanos.html" class="hero__anchor">MÁS INFORMACIÓN</a>
@@ -126,7 +126,7 @@
   <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
 
 
-    <img class="infocard__img"src="../img/barniz.png" alt="">
+    <img class="infocard__img"src="../img/barniz.png" alt="barniz">
                 <h2 class="infocard__titulo">Barniz</h2>
                 <p class="infocard__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni necessitatibus, accusamus maxime reiciendis nam quod eum iste numquam sit sapiente, voluptate architecto corporis. Non eligendi deserunt accusantium voluptatum, omnis saepe, reiciendis consequatur suscipit in ad delectus? Officia harum praesentium illo?</p>
                 <a href="./contactanos.html" class="hero__anchor">MÁS INFORMACIÓN</a>
@@ -138,7 +138,7 @@
   <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
   
   
-      <img class="infocard__img"src="../img/anticorrosivo.png" alt="">
+      <img class="infocard__img"src="../img/anticorrosivo.png" alt="diluyente">
                   <h2 class="infocard__titulo">Diluyente N1</h2>
                   <p class="infocard__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni necessitatibus, accusamus maxime reiciendis nam quod eum iste numquam sit sapiente, voluptate architecto corporis. Non eligendi deserunt accusantium voluptatum, omnis saepe, reiciendis consequatur suscipit in ad delectus? Officia harum praesentium illo?</p>
                   <a href="./contactanos.html" class="hero__anchor">MÁS INFORMACIÓN</a>
@@ -148,7 +148,7 @@
   <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
   
   
-      <img class="infocard__img"src="../img/anticorrosivo.png" alt="">
+      <img class="infocard__img"src="../img/anticorrosivo.png" alt="anticorrosivo">
                   <h2 class="infocard__titulo">Pintura Tráfico</h2>
                   <p class="infocard__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni necessitatibus, accusamus maxime reiciendis nam quod eum iste numquam sit sapiente, voluptate architecto corporis. Non eligendi deserunt accusantium voluptatum, omnis saepe, reiciendis consequatur suscipit in ad delectus? Officia harum praesentium illo?</p>
                   <a href="./contactanos.html" class="hero__anchor">MÁS INFORMACIÓN</a>
@@ -158,7 +158,7 @@
   <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
   
   
-      <img class="infocard__img"src="../img/barniz.png" alt="">
+      <img class="infocard__img"src="../img/barniz.png" alt="zincromato">
                   <h2 class="infocard__titulo">Zincromato</h2>
                   <p class="infocard__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni necessitatibus, accusamus maxime reiciendis nam quod eum iste numquam sit sapiente, voluptate architecto corporis. Non eligendi deserunt accusantium voluptatum, omnis saepe, reiciendis consequatur suscipit in ad delectus? Officia harum praesentium illo?</p>
                   <a href="./contactanos.html" class="hero__anchor">MÁS INFORMACIÓN</a>
@@ -177,7 +177,7 @@
           <div class="collapse show navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav footer__list align-items-center">
                 <li class="nav-item footer__item">
-                    <a class="nav-link active footer__anchor" aria-current="page"  href="#"><img src="../img/fondo1.jpg" alt="logo"></a></a>
+                    <a class="nav-link active footer__anchor" aria-current="page"  href="#"><img src="../img/fondo1.jpg" alt="fondo_1"></a></a>
                   </li>
               <li class="nav-item footer__item">
                 <a class="nav-link active footer__anchor" aria-current="page" href="#">SIGUENOS EN:</a>
