5 Commint: Primera mejora de diseño estetico

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="hero__wrapper">
         <h1 class="hero__heading">Bienvenidos a Química torres</h1>
         <p class="hero-slogan">Pinturas de larga vida</p>
-        <a href="pag/Nosotros.html" class="hero__anchor">MÁS INFORMACIÓN</a>
+        
     </div>
 </section>
 
@@ -75,7 +75,7 @@
 <div class="p-3 border  infocard aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
 <a href="#"><img src="img/quimica torres logo largo.png" alt="logolargo" class="infocard__img"></a>
     <h2 class="infocard__titulo">Nosotros</h2>
-    <p class="infocard__desc">Química Torres SAC desde 01/06/2012, Q.T ha ofrecido la mejor calidad en sus productos logrando mantenerse competitivos para liderar el mercado de pintura y thinner.</p>
+    <p class="infocard__desc">Química Torres SAC ha ofrecido la mejor calidad en sus productos logrando mantenerse competitivos en el mercado de pintura y thinner.</p>
     <a href="pag/mi cuenta.html" class="hero__anchor">MÁS INFORMACIÓN</a>
 </div>
 </div>
@@ -111,7 +111,7 @@
 
 
 <aside class="container-fluid video">
-  <h2 class="video__titulo"> En busca del color perfecto</h2>
+  <h2 class="video__titulo"> El color perfecto</h2>
   
   <iframe id="background-video" width="560" height="315" src="https://www.youtube.com/embed/ENoRePki-bo?controls=0&amp;start=90&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
