--- a/pag/Nosotros.html
+++ b/pag/Nosotros.html
@@ -143,7 +143,7 @@
         <hr>
         </main>
         <aside class="container-fluid video">
-          <h2 class="video__titulo"> En busca del color perfecto</h2>
+          <h2 class="video__titulo"> El color perfecto</h2>
           
           <iframe id="background-video" width="560" height="315" src="https://www.youtube.com/embed/ENoRePki-bo?controls=0&amp;start=90&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           
